@@ -1,5 +1,7 @@
 cs
 de
+# en_GB not needed
+en_US
 eo
 es
 eu
