@@ -2,6 +2,7 @@ SUBDIRS = \
 	libmpeg2 \
 	libmpeg2new
 
+include $(top_builddir)/misc/Makefile.plugins
 include $(top_srcdir)/misc/Makefile.common
 
 AM_CFLAGS  = $(DEFAULT_OCFLAGS) $(VISIBILITY_FLAG)
