@@ -70,8 +70,10 @@ xine-lib (1.1.90) (Unreleased)
 
 xine-lib (1.1.17) 2009-??-??
   * Build fixes related to ImageMagick 6.4 & later.
+  * Fix an error in Matroska PTS calculation.
   * Enable libmpeg2new. This is not yet production code; the old mpeg2
     decoder remains the default.
+  * Fix a broken size check in the pvr input plugin (ref. CVE-2008-5239).
 
 xine-lib (1.1.16.1) 2009-01-11
   * Fix build with older ffmpeg, both internal and in Debian 5.0.
